# Containers

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_and_run_docker.sh
.github/workflows/: asan.yml  build [linux].yml  build [macos].yml  build [windows].yml  build-linux.yml  build-windows.yml  build_and_validation.yml  clang-format.yml  cmake.yml  code-coverage.yml  create-release.yml  delete-workflow-runs.yml  docker-build.yml  linux.yml  lsan.yml  macos.yml  sanitizers.yml  ubsan.yml  unit-tests [linux].yml  unit-tests [macos].yml  unit-tests [windows].yml  unit-tests-linux.yml  unit-tests-macos.yml  unit-tests-windows.yml  unit-tests.yml  valgrind.yml  weekly-run.yml  weekly.yml  windows.yml
.github/workflows/cmake-installation/: action.yml
.github/workflows/scripts/: commit_changes.py  commit_changes.sh  create-release-branch.sh
.github/workflows/templates/cmake-installation/: action.yml
.github/workflows/templates/python3-installation/: action.yml
cmake/: ContainersConfig.cmake.in  create_test_suite.cmake
include/: Array.hpp  List.hpp  Stack.hpp  Vector.hpp  array.hpp  list.hpp  stack.hpp  vector.hpp
scripts/: build_and_run.sh  build_and_run_docker_container.py  generate_code_coverage.py  generate_code_coverage_raport.sh  run_all_unit_tests.sh  run_clang_code_format.py  run_clang_format.sh  run_unit_tests.py  run_valgrind.py  run_valgrind.sh
scripts/docker/: build_and_run.py  compile_and_execute_unit_tests.py
src/: CMakeLists.txt  main.cpp  math.cpp
tests/: CMakeLists.txt  StackTestSuite.cpp  math_test_suit.cpp  run_all_unit_tests.sh
tests/Array/: ArrayTestSuite.cpp  CMakeLists.txt  EmptyArrayTestSuite.cpp
tests/ArrayTestSuite/: ArrayTestSuite.cpp  CMakeLists.txt  EmptyArrayTestSuite.cpp
tests/ArrayTestSute/: ArrayTestSuite.cpp  CMakeLists.txt  EmptyArrayTestSuite.cpp
tests/ListTestSuite/: CMakeLists.txt  EmptyListTestSuite.cpp  ListTestSuite.cpp
tests/Stack/: CMakeLists.txt  StackTestSuite.cpp
tests/StackTestSuite/: CMakeLists.txt  EmptyStackTestSuite.cpp  StackTestSuite.cpp
tests/VectorTestSuite/: CMakeLists.txt  EmptyVectorTestSuite.cpp  VectorTestSuite.cpp
tests/array_test_suite/: CMakeLists.txt  array_test_suite.cpp  empty_array_test_suite.cpp  files.cmake
tests/list_test_suite/: CMakeLists.txt  empty_list_test_suite.cpp  files.cmake  list_test_suite.cpp
tests/stack_test_suite/: CMakeLists.txt  empty_stack_test_suite.cpp  files.cmake  stack_test_suite.cpp
tests/vector_test_suite/: CMakeLists.txt  empty_vector_test_suite.cpp  files.cmake  vector_test_suite.cpp
